# rs-solar

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  shell.nix
backups/src-1/: lib.rs
backups/src-1/asteroids/: mod.rs
backups/src-1/moons/: mod.rs
backups/src-1/moons/luna/: body.rs  mod.rs
backups/src-1/planets/: mod.rs
backups/src-1/planets/earth/: body.rs  mod.rs  utc.rs
backups/src-1/planets/mars/: body.rs  datetime.rs  fromstr.rs  mod.rs  mtc.rs
backups/src-1/shared/: mod.rs
backups/src-1/shared/calendar/: builder.rs  julian.rs  mod.rs  standard.rs
backups/src-1/shared/datetime/: mod.rs
backups/src-1/shared/kepler/: body.rs  datetime.rs  mod.rs  orbit.rs  seasons.rs  timezone.rs  trig.rs
backups/src-1/shared/math/: cosmic.rs  mod.rs  trig.rs
benches/: anomaly.rs
src/: anomaly.rs  asteroids.rs  comets.rs  conversions.rs  exoplanets.rs  julian.rs  kepler.rs  lib.rs  moons.rs  orbit.rs  planets.rs  utils.rs
src-old/: lib.rs
src-old/earth/: mod.rs
src-old/earth/Calendar/: index.rs  julian.rs  julian_test.rs  macros.rs  macros2.rs  mod.rs  tests.rs
src-old/earth/Timezones/: index.rs  macros.rs  mod.rs  tests.rs
src-old/mars/: mod.rs
src-old/mars/Calendar/: formats.rs  index.rs  mod.rs
src-old/mars/Timezones/: formats.rs  mod.rs
src-old/shared/: body.rs  date.rs  mod.rs  time.rs
src/comets/: mod.rs
src/exoplanets/: mod.rs
src/planets/: earth.rs  mars.rs
src/planets/earth/: mod.rs
src/planets/mars/: mod.rs
src/shared/: earth_calendar.rs  keplerian_body.rs  mod.rs
tests/: earth-ut.rs  mars-ut.rs
(+6 files in other folders)
